<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".activity.CadastrarActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/no"
        android:scaleType="centerCrop"
        android:src="@drawable/dardos"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="205dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <EditText
            android:id="@+id/et_logar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/et_logar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_logar_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:text="@string/gravar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>