<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CadastrarAnunciosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_um"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_imagem_bg" />
        <ImageView
            android:id="@+id/iv_dois"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_imagem_bg" />
        <ImageView
            android:id="@+id/iv_tres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_imagem_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/sp_estados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Spinner
            android:id="@+id/sp_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_cad_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/t_tulo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />



    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/et_cad_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />



    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/et_cad_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:mask="(__) _____-____"
        app:maskCharacter="_"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telefone"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/et_cad_descricao"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/descri_o"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bt_cad_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text"
        android:text="@string/anunciar"
        android:textColor="@color/white"
        android:textSize="14sp" />
</androidx.appcompat.widget.LinearLayoutCompat>